Update class 'DrawPile'